     fixes a bug reported by Aaron Bentley on IRC. (Ian Clatworthy)

   * Trivial fix for invoking command ``reconfigure`` without arguments.
     (Rob Weir, #141629)

   * ``WorkingTree.rename_one`` will now raise an error if normalisation of the
     new path causes bzr to be unable to access the file. (Robert Collins)

  API BREAKS:

   * ``CommitBuilder.record_entry_contents`` now requires the root entry of a
     tree be supplied to it, previously failing to do so would trigger a
     deprecation warning. (Robert Collins)

   * ``KnitVersionedFile.add*`` will no longer cache added records even when
     enable_cache() has been called - the caching feature is now exclusively for
     reading existing data. (Robert Collins)

   * Removed ``bzrlib.transport.TransportLogger`` - please see the new
     ``trace+`` transport instead. (Robert Collins)

   * Removed previously deprecated varargs interface to ``TestCase.run_bzr`` and
     deprecated methods ``TestCase.capture`` and ``TestCase.run_bzr_captured``.
     (Martin Pool)

   * Removed previous deprecated ``basis_knit`` parameter to the
     ``KnitVersionedFile`` constructor. (Robert Collins)

   * Special purpose method ``TestCase.run_bzr_decode`` is moved to the test_non_ascii 
     class that needs it.
     (Martin Pool)

   * The ``VersionedFile`` interface now allows content checks to be bypassed
     by supplying check_content=False.  This saves nearly 30% of the minimum
     cost to store a version of a file. (Robert Collins)

   * Tree's with bad state such as files with no length or sha will no longer
     be silently accepted by the repository XML serialiser. To serialise
     inventories without such data, pass working=True to write_inventory.
     (Robert Collins)

   * ``VersionedFile.fix_parents`` has been removed as a harmful API.
     ``VersionedFile.join`` will no longer accept different parents on either
     side of a join - it will either ignore them, or error, depending on the